objects/Step_Forward_Account_Management__c.object
<CustomObject>
    <description>Step Forward Employer Recruitment Activity and Account Management</description>
    <fields>
        <fullName>ASK_notes__c</fullName>
        <inlineHelpText>Please enter any notes that might be relevant  to this process.</inlineHelpText>
        <label>ASK notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Address__c</fullName>
        <formula>Account__r.BillingStreet &amp; br() &amp;
 Account__r.BillingCity &amp; br() &amp;
 Account__r.BillingCountry &amp; br() &amp;
 Account__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Local_Authority__c</fullName>
        <formula>Account__r.Local_Authority__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Local Authority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_info__c</fullName>
        <formula>&quot;Name: &quot;&amp; Account__r.Owner.FirstName &amp;&quot; &quot;&amp; Account__r.Owner.LastName &amp;br()&amp;
&quot;Role:  &quot;&amp; Account__r.Owner.Title &amp;br()&amp;
&quot;Email:  &quot;&amp; Account__r.Owner.Email&amp;br()&amp;
&quot;Mobile: &quot;&amp; Account__r.Owner.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Post_Code__c</fullName>
        <formula>Account__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Post Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Step_Forward_Recruitment_Activies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account_main_Phone_number__c</fullName>
        <formula>Account__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account main Phone number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_main_contact_name__c</fullName>
        <formula>Account__r.Main_Contact__r.FirstName &amp;&quot; &quot;&amp; Account__r.Main_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account main contact name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_main_email_address__c</fullName>
        <formula>Account__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A lookup to the main account email address</inlineHelpText>
        <label>Account main email address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_Jobs__c</fullName>
        <inlineHelpText>All jobs by Accounting pathway</inlineHelpText>
        <label>Accounting Jobs</label>
        <summaryFilterItems>
            <field>Step_Forward_Job__c.Pathway__c</field>
            <operation>equals</operation>
            <value>Accounting</value>
        </summaryFilterItems>
        <summaryForeignKey>Step_Forward_Job__c.Step_Forward_Account_Management_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ask_status__c</fullName>
        <label>Ask status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ask in progress; no contact yet</fullName>
                </value>
                <value>
                    <fullName>Unable to contact account owner</fullName>
                </value>
                <value>
                    <fullName>Account owner contacted</fullName>
                </value>
                <value>
                    <fullName>Not agreed</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSS_Jobs__c</fullName>
        <inlineHelpText>All jobs by Business Support Services pathway</inlineHelpText>
        <label>BA Jobs</label>
        <summaryFilterItems>
            <field>Step_Forward_Job__c.Pathway__c</field>
            <operation>equals</operation>
            <value>Business Administration</value>
        </summaryFilterItems>
        <summaryForeignKey>Step_Forward_Job__c.Step_Forward_Account_Management_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contact_responsibility__c</fullName>
        <label>Contact responsibility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Decision maker</fullName>
                </value>
                <value>
                    <fullName>Hiring manager</fullName>
                </value>
                <value>
                    <fullName>Champion</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_account_owner_contacted__c</fullName>
        <inlineHelpText>The date the account owner was contacted, this is a very informative help text.</inlineHelpText>
        <label>Date account owner contacted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employer_Recruitment_Stage__c</fullName>
        <label>Employer Recruitment Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>Left Email</fullName>
                </value>
                <value>
                    <fullName>Spoke to Gatekeeper - worth phoning again</fullName>
                </value>
                <value>
                    <fullName>Spoke to gatekeeper - give up</fullName>
                </value>
                <value>
                    <fullName>Spoke to Decision Maker - think about it</fullName>
                </value>
                <value>
                    <fullName>Spoke to Decision Maker - not interested</fullName>
                </value>
                <value>
                    <fullName>Spoke to Decision Maker - not interested, contact next year</fullName>
                </value>
                <value>
                    <fullName>Follow up call sorted</fullName>
                </value>
                <value>
                    <fullName>Meeting booked</fullName>
                </value>
                <value>
                    <fullName>Meeting held - in discussion</fullName>
                </value>
                <value>
                    <fullName>Meeting held -not interested</fullName>
                </value>
                <value>
                    <fullName>Vacancy confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employer_Size__c</fullName>
        <label>Employer Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-50</fullName>
                </value>
                <value>
                    <fullName>51-250</fullName>
                </value>
                <value>
                    <fullName>251-1000</fullName>
                </value>
                <value>
                    <fullName>1000+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Call_Date__c</fullName>
        <label>First Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follow_up_date__c</fullName>
        <formula>Date_account_owner_contacted__c +7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>7 days after initial contact</inlineHelpText>
        <label>Follow up date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Form_Name_of_SF_coordinator__c</fullName>
        <label>Form: Name of SF coordinator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospitality_Jobs__c</fullName>
        <label>Hospitality Jobs</label>
        <summaryFilterItems>
            <field>Step_Forward_Job__c.Pathway__c</field>
            <operation>equals</operation>
            <value>Hospitality</value>
        </summaryFilterItems>
        <summaryForeignKey>Step_Forward_Job__c.Step_Forward_Account_Management_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IT_Software_Telecoms_Jobs__c</fullName>
        <inlineHelpText>All jobs by IT, Software and Telecoms pathway</inlineHelpText>
        <label>IT, Software Telecoms Jobs</label>
        <summaryFilterItems>
            <field>Step_Forward_Job__c.Pathway__c</field>
            <operation>equals</operation>
            <value>&quot;IT, Software and Telecoms&quot;</value>
        </summaryFilterItems>
        <summaryForeignKey>Step_Forward_Job__c.Step_Forward_Account_Management_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Is_Ask_required__c</fullName>
        <formula>if(ispickval(Source_of_opportunity__c,&quot;Internal lead&quot;),&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Ask required?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>London_borough__c</fullName>
        <label>London borough</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Barking And Dagenham</fullName>
                </value>
                <value>
                    <fullName>Barnet</fullName>
                </value>
                <value>
                    <fullName>Bexley</fullName>
                </value>
                <value>
                    <fullName>Brent</fullName>
                </value>
                <value>
                    <fullName>Bromley</fullName>
                </value>
                <value>
                    <fullName>Camden</fullName>
                </value>
                <value>
                    <fullName>City Of London</fullName>
                </value>
                <value>
                    <fullName>Croydon</fullName>
                </value>
                <value>
                    <fullName>Ealing</fullName>
                </value>
                <value>
                    <fullName>Enfield</fullName>
                </value>
                <value>
                    <fullName>Greenwich</fullName>
                </value>
                <value>
                    <fullName>Hackney</fullName>
                </value>
                <value>
                    <fullName>Hammersmith And Fulham</fullName>
                </value>
                <value>
                    <fullName>Haringey</fullName>
                </value>
                <value>
                    <fullName>Harrow</fullName>
                </value>
                <value>
                    <fullName>Havering</fullName>
                </value>
                <value>
                    <fullName>Hillingdon</fullName>
                </value>
                <value>
                    <fullName>Hounslow</fullName>
                </value>
                <value>
                    <fullName>Islington</fullName>
                </value>
                <value>
                    <fullName>Kensington And Chelsea</fullName>
                </value>
                <value>
                    <fullName>Kingston Upon Thames</fullName>
                </value>
                <value>
                    <fullName>Lambeth</fullName>
                </value>
                <value>
                    <fullName>Lewisham</fullName>
                </value>
                <value>
                    <fullName>Merton</fullName>
                </value>
                <value>
                    <fullName>Newham</fullName>
                </value>
                <value>
                    <fullName>Redbridge</fullName>
                </value>
                <value>
                    <fullName>Richmond Upon Thames</fullName>
                </value>
                <value>
                    <fullName>Southwark</fullName>
                </value>
                <value>
                    <fullName>Sutton</fullName>
                </value>
                <value>
                    <fullName>Tower Hamlets</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Main_contact_email__c</fullName>
        <formula>Step_Forward_main_contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main contact email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_contact_numbers__c</fullName>
        <formula>&quot;Phone : &quot;&amp; Step_Forward_main_contact__r.Phone &amp; BR()&amp;
&quot;Mobile: &quot;&amp;  Step_Forward_main_contact__r.MobilePhone &amp; br()&amp;
&quot;Work  : &quot;&amp;  Step_Forward_main_contact__r.npe01__WorkPhone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main contact numbers</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Booked_Date__c</fullName>
        <label>Meeting Booked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_Held_Date__c</fullName>
        <label>Meeting Held Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Method_of_contact__c</fullName>
        <label>Method of contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Face to face</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pathways_eligible_for__c</fullName>
        <inlineHelpText>Please select all pathways this organisation is eligible for</inlineHelpText>
        <label>Pathways eligible for</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Business Administration</fullName>
                </value>
                <value>
                    <fullName>IT, Software and Telecoms</fullName>
                </value>
                <value>
                    <fullName>Social Media &amp; Digital Media</fullName>
                </value>
                <value>
                    <fullName>Early Years Education</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_StepFwd_Contat_Involvement__c</fullName>
        <inlineHelpText>Has there been previous contact or involvement with this account by Step Forward?</inlineHelpText>
        <label>Previous StepFwd Contat/Involvement?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recruitment_cycle__c</fullName>
        <inlineHelpText>Step Forward Account Management Recruitment Cycle</inlineHelpText>
        <label>Recruitment cycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registered_Organisation_Address__c</fullName>
        <label>Registered Organisation Address</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_Organisation_Name__c</fullName>
        <label>Registered Organisation Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Call_Date__c</fullName>
        <label>Second Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <inlineHelpText>Please select the sector this organisation is in</inlineHelpText>
        <label>Sector</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accountancy, banking and finance</fullName>
                </value>
                <value>
                    <fullName>Business, consulting and management</fullName>
                </value>
                <value>
                    <fullName>Creative arts and culture</fullName>
                </value>
                <value>
                    <fullName>Charities and voluntary work</fullName>
                </value>
                <value>
                    <fullName>Engineering and manufacturing</fullName>
                </value>
                <value>
                    <fullName>Energy and utilities</fullName>
                </value>
                <value>
                    <fullName>Environment and agriculture</fullName>
                </value>
                <value>
                    <fullName>Health and social care</fullName>
                </value>
                <value>
                    <fullName>Hospitality, tourism and sport</fullName>
                </value>
                <value>
                    <fullName>IT and information services</fullName>
                </value>
                <value>
                    <fullName>Law</fullName>
                </value>
                <value>
                    <fullName>Marketing, advertising and PR</fullName>
                </value>
                <value>
                    <fullName>Media and publishing</fullName>
                </value>
                <value>
                    <fullName>Property and construction</fullName>
                </value>
                <value>
                    <fullName>Public sector</fullName>
                </value>
                <value>
                    <fullName>Recruitment and HR</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Science and pharmaceuticals</fullName>
                </value>
                <value>
                    <fullName>Teaching and education</fullName>
                </value>
                <value>
                    <fullName>Transport and logistics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Short_description_of_account__c</fullName>
        <inlineHelpText>A general summary of what the organisation is all about</inlineHelpText>
        <label>Short description of account</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Social_Media_Digital_Marketing_Jobs__c</fullName>
        <inlineHelpText>All jobs by Social Media &amp; Digital Marketing pathway</inlineHelpText>
        <label>Social Media &amp; Digital Marketing Jobs</label>
        <summaryFilterItems>
            <field>Step_Forward_Job__c.Pathway__c</field>
            <operation>equals</operation>
            <value>Social Media &amp; Digital Marketing</value>
        </summaryFilterItems>
        <summaryForeignKey>Step_Forward_Job__c.Step_Forward_Account_Management_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Source_of_opportunity__c</fullName>
        <inlineHelpText>Please note that if the account is from an internal source, and you would like to use its contacts, you will need to go through the ASK process and contact the account owner for permission.</inlineHelpText>
        <label>Source of employer opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cold call</fullName>
                </value>
                <value>
                    <fullName>Cold Call Database</fullName>
                </value>
                <value>
                    <fullName>Job listing</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>Account contact</fullName>
                </value>
                <value>
                    <fullName>Step Forward contact</fullName>
                </value>
                <value>
                    <fullName>Current employer</fullName>
                </value>
                <value>
                    <fullName>Personal contact</fullName>
                </value>
                <value>
                    <fullName>Internal lead</fullName>
                </value>
                <value>
                    <fullName>Networking Event</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage_Visual__c</fullName>
        <formula>if(ispickval(Employer_Recruitment_Stage__c,&quot;3 - Considering meeting&quot;),image(&quot;https://c.na8.content.force.com/servlet/servlet.FileDownload?file=015C0000002ONiv&quot;,&quot;Orange&quot;),
if(ispickval(Employer_Recruitment_Stage__c,&quot;4 - Meeting booked&quot;),image(&quot;https://c.na8.content.force.com/servlet/servlet.FileDownload?file=015C0000002ONiv&quot;,&quot;Orange&quot;),
if(ispickval(Employer_Recruitment_Stage__c,&quot;5 - Discussing potential jobs&quot;),image(&quot;https://c.na8.content.force.com/servlet/servlet.FileDownload?file=015C0000002ONiv&quot;,&quot;Orange&quot;),
if(ispickval(Employer_Recruitment_Stage__c,&quot;7 - Interested - Not this year&quot;),image(&quot;https://c.na8.content.force.com/servlet/servlet.FileDownload?file=015C0000002ONlV&quot;,&quot;SpeedLimit&quot;),
if(ispickval(Employer_Recruitment_Stage__c,&quot;7 - Interested - No jobs confirmed&quot;),image(&quot;https://c.na8.content.force.com/servlet/servlet.FileDownload?file=015C0000002ONlV&quot;,&quot;SpeedLimit&quot;),
if(ispickval(Employer_Recruitment_Stage__c,&quot;8 - Closed - No interest at all&quot;),image(&quot;https://c.na8.content.force.com/servlet/servlet.FileDownload?file=015C0000002ONj5&quot;,&quot;Red&quot;),
if(ispickval(Employer_Recruitment_Stage__c,&quot;8 - Closed - Job/s confirmed&quot;),image(&quot;https://c.na8.content.force.com/servlet/servlet.FileDownload?file=015C0000002ONiq&quot;,&quot;Green&quot;),image(&quot;https://c.na8.content.force.com/servlet/servlet.FileDownload?file=015C0000002N9yO&quot;,&quot;StepForward&quot;))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Visual</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step_Forward_Notes__c</fullName>
        <label>Step Forward Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Step_Forward_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Step Forward Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>Step Forward Recruitment</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Step_Forward_Employer_Recruitment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Step_Forward_main_contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Main account contact</inlineHelpText>
        <label>Step Forward main contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Step_Forward_Employer_Recruitment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Step_Forward_notes_entry__c</fullName>
        <inlineHelpText>Please enter your notes here</inlineHelpText>
        <label>Step Forward notes entry</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Third_Call_Date__c</fullName>
        <label>Third Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warm_Cold__c</fullName>
        <inlineHelpText>Warm or cold contact</inlineHelpText>
        <label>Warm/Cold</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Warm</fullName>
                </value>
                <value>
                    <fullName>Cold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Working_with_Children_Jobs__c</fullName>
        <inlineHelpText>All jobs by Working with Children pathway</inlineHelpText>
        <label>Early Years Education</label>
        <summaryFilterItems>
            <field>Step_Forward_Job__c.Pathway__c</field>
            <operation>equals</operation>
            <value>Early Years Education</value>
        </summaryFilterItems>
        <summaryForeignKey>Step_Forward_Job__c.Step_Forward_Account_Management_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Step Forward Account Management</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Post_Code__c</columns>
        <columns>Account_main_contact_name__c</columns>
        <columns>Step_Forward_Owner__c</columns>
        <columns>Sector__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Andy</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Post_Code__c</columns>
        <columns>Account_main_contact_name__c</columns>
        <columns>Step_Forward_Owner__c</columns>
        <columns>Sector__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Step_Forward_Owner__c</field>
            <operation>equals</operation>
            <value>andy bowley</value>
        </filters>
        <label>Andy</label>
    </listViews>
    <listViews>
        <fullName>Andy_ALL_Meetings_Booked</fullName>
        <columns>NAME</columns>
        <columns>Step_Forward_Owner__c</columns>
        <columns>Sector__c</columns>
        <columns>Account__c</columns>
        <columns>London_borough__c</columns>
        <columns>Employer_Recruitment_Stage__c</columns>
        <columns>Step_Forward_notes_entry__c</columns>
        <columns>Step_Forward_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employer_Recruitment_Stage__c</field>
            <operation>contains</operation>
            <value>Meeting booked,Meeting held - in discussion,Meeting held -not in,Vacancy confir</value>
        </filters>
        <filters>
            <field>Step_Forward_Owner__c</field>
            <operation>contains</operation>
            <value>Andy</value>
        </filters>
        <label>Andy ALL Meetings Booked</label>
    </listViews>
    <listViews>
        <fullName>Andy_ALL_Meetings_Booked1</fullName>
        <columns>NAME</columns>
        <columns>Step_Forward_Owner__c</columns>
        <columns>Sector__c</columns>
        <columns>Account__c</columns>
        <columns>London_borough__c</columns>
        <columns>Employer_Recruitment_Stage__c</columns>
        <columns>Step_Forward_notes_entry__c</columns>
        <columns>Step_Forward_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employer_Recruitment_Stage__c</field>
            <operation>contains</operation>
            <value>Meeting booked,Meeting held - in discussion,Meeting held -not in,Vacancy confir</value>
        </filters>
        <label>Andy ALL Meetings Booked</label>
    </listViews>
    <listViews>
        <fullName>Blank</fullName>
        <columns>NAME</columns>
        <columns>Step_Forward_Owner__c</columns>
        <columns>Sector__c</columns>
        <columns>Account__c</columns>
        <columns>London_borough__c</columns>
        <columns>Employer_Recruitment_Stage__c</columns>
        <columns>Step_Forward_notes_entry__c</columns>
        <columns>Step_Forward_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employer_Recruitment_Stage__c</field>
            <operation>contains</operation>
            <value>Meeting booked,Meeting held - in discussion,Meeting held -not in,Vacancy confir</value>
        </filters>
        <filters>
            <field>Sector__c</field>
            <operation>equals</operation>
        </filters>
        <label>Blank</label>
    </listViews>
    <listViews>
        <fullName>Busy_bees_Contacts_2015_CW</fullName>
        <columns>NAME</columns>
        <columns>Step_Forward_Owner__c</columns>
        <columns>Account__c</columns>
        <columns>Account_main_Phone_number__c</columns>
        <columns>Account_main_email_address__c</columns>
        <columns>London_borough__c</columns>
        <columns>Sector__c</columns>
        <columns>Employer_Recruitment_Stage__c</columns>
        <columns>Step_Forward_notes_entry__c</columns>
        <columns>Step_Forward_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sector__c</field>
            <operation>equals</operation>
            <value>Teaching and education</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>busy bees</value>
        </filters>
        <label>Busy bees Contacts 2015 CW</label>
    </listViews>
    <listViews>
        <fullName>Cath_s_team_ALL_Meetings_Booked</fullName>
        <columns>NAME</columns>
        <columns>Step_Forward_Owner__c</columns>
        <columns>Sector__c</columns>
        <columns>Account__c</columns>
        <columns>London_borough__c</columns>
        <columns>Employer_Recruitment_Stage__c</columns>
        <columns>Step_Forward_notes_entry__c</columns>
        <columns>Step_Forward_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employer_Recruitment_Stage__c</field>
            <operation>contains</operation>
            <value>Meeting booked,Meeting held - in discussion,Meeting held -not in,Vacancy confir</value>
        </filters>
        <filters>
            <field>Step_Forward_Owner__c</field>
            <operation>contains</operation>
            <value>Catharine,Diana,Stephen,Zac</value>
        </filters>
        <label>Cath&apos;s team ALL Meetings Booked</label>
    </listViews>
    <listViews>
        <fullName>Charity_list</fullName>
        <columns>NAME</columns>
        <columns>Step_Forward_Owner__c</columns>
        <columns>Account__c</columns>
        <columns>Account_Post_Code__c</columns>
        <columns>Account_main_Phone_number__c</columns>
        <columns>Account_main_email_address__c</columns>
        <columns>London_borough__c</columns>
        <columns>Sector__c</columns>
        <columns>Employer_Recruitment_Stage__c</columns>
        <columns>Step_Forward_notes_entry__c</columns>
        <columns>Step_Forward_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sector__c</field>
            <operation>equals</operation>
            <value>Charities and voluntary work</value>
        </filters>
        <label>Charity list</label>
    </listViews>
</CustomObject>